--- a/lab4/app/src/main/AndroidManifest.xml
+++ b/lab4/app/src/main/AndroidManifest.xml
@@ -10,24 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab3"
+        android:theme="@style/Theme.Lab4"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Lab3"
-            tools:ignore="RedundantLabel">
+            android:theme="@style/Theme.Lab4">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UserActivity"/>
-        <activity android:name=".SettingActivity" />
-        <activity android:name=".GameActivity"/>
-        <activity android:name=".ResultActivity"/>
     </application>
 
 </manifest>
